test/gpu/native/assertOnFailToGpuize.4.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize.chpl:41: error: Loop containing assertOnGpu() is not Gpuizable
assertOnFailToGpuize.chpl:19: note: function is marked not gpuizable
